# HighResolution_VideoOutpainting

./: .gitignore
WanCanvas/: .gitignore  README.md  WAN_FYC_ARCHITECTURE_NOTE.md  WAN_FYC_EXECUTION_PLAN.md  environment.yml  pyproject.toml  requirements-runtime.txt
WanCanvas/configs/: base.yaml  infer-outpaint-real.yaml  infer-outpaint-smoke.yaml  model-ti2v-5b.yaml  train-outpaint-smoke.yaml
WanCanvas/docs/: wan-fyc-architecture-note.md  wan-fyc-trash-matrix.md
WanCanvas/scripts/: inspect_wan_runtime.py  run_wan_outpaint.py  train_wan_outpaint.py
WanCanvas/tests/: test_canvas_expansion_contract.py  test_denoising_contract.py  test_fyc_conditioning.py  test_fyc_sample_bridge.py  test_fyc_sample_contract.py  test_geometry_v1_compat.py  test_known_region_preserve.py  test_layout_encoder_shapes.py  test_logging_utils.py  test_mask_contract.py  test_outpaint_runner.py  test_size_alignment.py  test_smoke_trainer.py  test_ti2v_runner.py  test_training_dry_run.py  test_wan_forward_path.py  test_wan_loader_smoke.py  test_window_scheduler.py
WanCanvas/wancanvas/: __init__.py  config_schema.py
WanCanvas/wancanvas/backbones/: __init__.py  runtime_env.py  wan_loader.py
WanCanvas/wancanvas/data/: __init__.py  contracts.py  geometry.py  outpaint_dataset.py  samplers.py
WanCanvas/wancanvas/inference/: __init__.py  outpaint_runner.py
WanCanvas/wancanvas/models/: __init__.py  condition_adapter.py  fyc_conditioning.py  fyc_sample_bridge.py  geometry_encoder.py  layout_encoder.py  mask_summary.py  wan_outpaint_wrapper.py
WanCanvas/wancanvas/pipelines/: __init__.py  (+5 more)
(+30 files in other folders)
